[workspace]
members = [
    "core",
    "transports/tcp",
    "examples/ping",
    # "examples/chat",
    # "examples/echo",
]

resolver = "2"

[workspace.package]
rust-version = "1.90.0"
edition = "2021"

[workspace.dependencies]
tokio = {version = "1", features = ["full"]}
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"

[workspace.lints]
clippy.pedantic = { level = "allow", priority = -1}
clippy.unnecessary_wraps = "warn"