[workspace]
members = [
    "core",
    "transport/tcp",
    "transport/udp",
    "examples/tcp"
]

resolver = "2"

[workspace.package]
rust-version = "1.90.0"
edition = "2021"

[workspace.dependencies]
tokio = {version = "1", features = ["full"]}
anyhow = "1"
async-trait = "0.1"


[workspace.lints]
clippy.pedantic = { level = "allow", priority = -1}
clippy.unnecessary_wraps = "warn"