[workspace]
members = [
    "core",
    "core/traits",
    "core/host",
    "transport/tcp",
    "transport/udp",
    "examples/tcp",
    "examples/host"
]

resolver = "2"

[workspace.package]
rust-version = "1.90.0"
edition = "2021"

[workspace.dependencies]
tokio = {version = "1", features = ["full"]}
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints]
clippy.pedantic = { level = "allow", priority = -1}
clippy.unnecessary_wraps = "warn"