[package]
name = "muxer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
unsigned-varint = { workspace = true }

traits = { path = "../core/traits" }
peer = { path = "../core/peer" }

rand = "0.8"
hex = "0.4.3"
rsa-der = "0.3.0"
base58 = "0.2.0"
