[package]
name = "rnet-security"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
prost = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }

rnet-tcp = { path = "../transport/tcp" }
rnet-traits = { path = "../core/traits" }
rnet-multiaddr = { path = "../core/multiaddr" }
rnet-peer = { path = "../core/peer" }
