[package]
name = "security"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
prost = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }

transport = { path = "../transport" }
traits = { path = "../core/traits" }
multiaddr = { path = "../core/multiaddr" }
peer = { path = "../core/peer" }
