[package]
name = "transport"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

prost = { workspace = true }
peer = { path = "../core/peer" }
traits = { path = "../core/traits" }
proto = { path = "../proto" }
multiaddr = { path = "../core/multiaddr" }
