[package]
name = "rnet-core-host"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
rsa = { workspace = true }

rnet-tcp = { path = "../../transport/tcp" }
rnet-core-traits = { path = "../../core/traits" }
rnet-core-multiaddr = { path = "../../core/multiaddr" }
sha2.workspace = true
rand = "0.8"
hex = "0.4.3"
rsa-der = "0.3.0"
base58 = "0.2.0"
