[package]
name = "example-floodsub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "floodsub"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

transport = { path = "../../transport" }
core = { path = "../../core" }
muxer = { path = "../../muxer" }
traits = { path = "../../core/traits" }
host = { path = "../../core/host" }
multiaddr = { path = "../../core/multiaddr" }
peer = { path = "../../core/peer" }
floodsub = { path = "../../protocols/floodsub" }

rsa = { workspace = true }
bincode = { workspace = true }
