[package]
name = "example-floodsub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "floodsub"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

transport = { path = "../../crates/transport" }
muxer = { path = "../../crates/muxer" }
node = { path = "../../crates/node" }
identity = { path = "../../crates/identity" }
floodsub = { path = "../../crates/protocols/floodsub" }

rsa = { workspace = true }
bincode = { workspace = true }
