[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
anyhow = {workspace = true}
async-trait = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
rnet-tcp = {path = "../../transport/tcp"}
rnet-core = {path = "../../core"}
rnet-core-traits = {path = "../../core/traits"}
rnet-core-host = {path = "../../core/host"}
rsa = {workspace = true}