[package]
name = "ping"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ping"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
bincode = { workspace = true }
hex = {workspace = true}

rnet-tcp = { path = "../../transport/tcp" }
rnet-muxer = { path = "../../muxer" }
rnet-core = { path = "../../core" }
rnet-traits = { path = "../../core/traits" }
rnet-host = { path = "../../core/host" }
rnet-multiaddr = { path = "../../core/multiaddr" }
rnet-peer = { path = "../../core/peer" }

