[package]
name = "example-rlnc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rlnc"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
bincode = { workspace = true }
hex = {workspace = true}

transport = { path = "../../crates/transport" }
muxer = { path = "../../crates/muxer" }
node = { path = "../../crates/node" }
identity = { path = "../../crates/identity" }
rand = "0.10.1"
