[package]
name = "tcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tcp"
path = "src/main.rs"

[dependencies]
tokio = {workspace = true}
anyhow = {workspace = true}
async-trait = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

transport = { path = "../../transport" }
core = {path = "../../core"}
traits = {path = "../../core/traits"}
multiaddr = {path = "../../core/multiaddr"}
