[package]
name = "rnet-mplex"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
unsigned-varint = { workspace = true }

rnet-tcp = { path = "../../transport/tcp" }
rnet-traits = { path = "../../core/traits" }
rnet-multiaddr = { path = "../../core/multiaddr" }
rnet-core = { path = "../../core" }
rnet-identify = { path = "../../protocols/identify" }
rnet-peer = { path = "../../core/peer" }
rnet-transport = { path = "../../transport" }
rand = "0.8"
hex = "0.4.3"
rsa-der = "0.3.0"
base58 = "0.2.0"
