[package]
name = "rnet-floodsub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
prost = {workspace = true}


rnet-multiaddr = { path = "../../core/multiaddr" }
rnet-traits = { path = "../../core/traits" }
rnet-transport = { path = "../../transport" }
rnet-proto = { path = "../../proto" }
rnet-muxer = { path = "../../muxer" }
rnet-peer = { path = "../../core/peer" }