[package]
name = "floodsub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
prost = {workspace = true}

traits = { path = "../../core/traits" }
proto = { path = "../../proto" }
peer = { path = "../../core/peer" }