[package]
name = "rnet-identify"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
anyhow = {workspace = true}
async-trait = {workspace = true}
serde = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
rnet-tcp = { path = "../../transport/tcp" }
rnet-traits = { path = "../../core/traits" }
rnet-multiaddr = { path = "../../core/multiaddr" }
rnet-peer = {path = "../../core/peer"}