[package]
name = "rnet-tcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
anyhow = {workspace = true}
async-trait = {workspace = true}
rnet-core = {path = "../../core"}
rnet-core-traits = {path = "../../core/traits"}
rnet-core-multiaddr = {path = "../../core/multiaddr"}